[package]
name = "learning_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.wasm-release]
inherits = "release"

# optimizes with size in mind here.
opt-level = "z"

# second optimize
lto = "fat"

codegen-units = 1

[dependencies]
bevy = { version = "0.8.0" }
